<resources>
    <string name="app_name">MyFlashcards</string>

    <!--API URLS ||DO NOT TRANSLATE||-->
    <string name="url_log_in" formatted="false">http://r1.flashcardshome.com/index.php/api/logIn?email=%s&amp;password=%s&amp;classId=%d</string>
    <string name="url_get_user_classes" formatted="false">http://r1.flashcardshome.com/index.php/api/getuserclasses?email=%s</string>
    <string name="url_host" formatted="false">http://r1.flashcardshome.com/%s</string>
    <string name="url_get_my_decks" formatted="false">http://r1.flashcardshome.com/index.php/api/getMyDecks?token=%s</string>
    <string name="url_delete_deck_card" formatted="false">http://r1.flashcardshome.com/index.php/api/deleteDeckCard?token=%s&amp;cardUId=%s</string>
    <string name="url_delete_deck" formatted="false">http://r1.flashcardshome.com/index.php/api/deleteDeck?token=%s&amp;deckUId=%s</string>
    <string name="url_add_deck_card" formatted="false">http://r1.flashcardshome.com/index.php/api/addNewDeckCard?cardUId=%s&amp;deckUId=%s&amp;token=%s&amp;question=%s&amp;answer=%s</string>
    <string name="url_update_deck_card" formatted="false">http://r1.flashcardshome.com/index.php/api/updateDeckCard?cardUId=%s&amp;deckUId=%s&amp;token=%s&amp;question=%s&amp;answer=%s</string>
    <string name="url_add_deck" formatted="false">http://r1.flashcardshome.com/index.php/api/addNewDeck?token=%s&amp;uid=%s&amp;title=%s&amp;description=%s&amp;keywords=%s&amp;deckType=%d&amp;dateCreated=%d</string>
    <string name="url_update_deck" formatted="false">http://r1.flashcardshome.com/index.php/api/updateDeck?token=%s&amp;deckUId=%s&amp;title=%s&amp;description=%s&amp;keywords=%s&amp;deckType=%d&amp;dateCreated=%d</string>
    <string name="url_get_one_deck" formatted="false">http://r1.flashcardshome.com/index.php/api/getOneDeck?token=%s&amp;deckUId=%s</string>
    <string name="url_set_subscription" formatted="false">http://r1.flashcardshome.com/index.php/api/setSubsriptionStatus?token=%s&amp;periodicity=%d</string>
    <string name="url_get_subscription" formatted="false">http://r1.flashcardshome.com/index.php/api/getSubsriptionStatus?token=%s</string>

    <!-- TOTAL-->
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>

    <!-- SignIn Activity-->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="contact_us">&lt;b&gt;&lt;u&gt;Contact us&lt;/u&gt;&lt;/b&gt;</string>"
    <string name="choose_your_class">CHOOSE YOUR CLASS</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_now">&lt;b&gt;&lt;u&gt;Sign up now!&lt;/u&gt;&lt;/b&gt;</string>
    <string name="no_account">No &lt;b&gt;myFlashcards&lt;/b&gt; account?</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_address">EMAIL_ADDRESS</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="d_m_auth_error_email">Please enter a valid email address and try again</string>
    <string name="d_m_auth_error_password">Please enter a valid password and try again</string>
    <string name="d_m_auth_error_choose_class">Please select a class from drop down list and try again</string>
    <string name="d_m_auth_error_title">&lt;b&gt;Authentication error&lt;/b&gt;</string>
    <string name="d_m_login_error_title">&lt;b&gt;Login error&lt;/b&gt;</string>
    <string name="d_m_login_error_message">Login or(and) password are incorrect</string>
    <string name="toast_connection_error">Connection error. Please try again later</string>
    <string name="close">Close</string>

    <!-- ChooseClassActivity-->
    <string name="choose_class_title">Choose classes</string>

    <!-- MyDecksActivity-->
    <string name="my_deck_title">My Decks</string>
    <string name="please_click_back_again">Please click BACK again to exit</string>
    <string name="nav_menu_reports">Reports</string>
    <string name="nav_menu_sync">Sync</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="nav_drawer_logo">Logo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="author">Author:</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="progress">Progress</string>
    <string name="cards">Cards</string>

    <!-- ReportsActivity-->
    <string name="reports_title">Reports</string>
    <string name="reports_message">Reports will be delivered to you via email.
        Please provide email address if different from the one shown int the box
        and choose daily or weekly delivery schedule.</string>
    <string name="daily">DAILY</string>
    <string name="weekly">WEEKLY</string>
    <string name="disable">DISABLE</string>
    <string name="subscribe">subscribe</string>
    <string name="every_week">to every week</string>
    <string name="every_day">to every day</string>
    <string name="disabled">disabled</string>

    <!-- CardsActivity-->
    <string name="cards_title">Cards</string>
    <string name="face">&lt;b&gt;&lt;font color=#50c180&gt;FACE: &lt;/font&gt;&lt;/b&gt;</string>
    <string name="back">&lt;b&gt;&lt;font color=#00a9ed&gt;BACK: &lt;/font&gt;&lt;/b&gt;</string>
    <string name="CardsActivity.Dialog.DeleteCard.Title">Delete card</string>
    <string name="CardsActivity.Dialog.DeleteCard.Message">Do you want to delete this card?</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="save">save</string>
    <string name="upload_face_pic">Upload face picture</string>
    <string name="upload_back_pick">upload back picture</string>
    <string name="face_undecor">FACE</string>
    <string name="back_undecor">BACK</string>

    <!-- EditCardsActivity-->
    <string name="edit_cards_title">Edit Card</string>
    <string name="new_card_title">New Card</string>
    <string name="form_validation">Form validation</string>
    <string name="dm_err_msg_back_cant_be_empty">Card Back field can\'t be empty</string>
    <string name="dm_err_msg_face_cant_be_empty">Card Face field can\'t be empty</string>
    <string name="new_card_created">New card created</string>
    <string name="something_wrong_try_one">Something wrong. Try one more time</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="image">Image</string>
    <string name="select_image">Select image</string>
    <string name="dir_created">Directory %s created</string>
    <string name="image_violated">Image integrity violated</string>
    <string name="card_added">Card adding successful</string>

    <!-- EditDeckActivity-->
    <string name="edit_deck_title">Edit Deck</string>
    <string name="create_deck_title">Create Deck</string>
    <string name="text_public">Public</string>
    <string name="text_private">Private</string>
    <string name="deck_name">DECK NAME</string>
    <string name="title">Title</string>
    <string name="description">DESCRIPTION</string>
    <string name="keywords">KEYWORDS(COMMA-SEPARATED)</string>
    <string name="title_fd_invalid">Title field can\'t be empty</string>
    <string name="desc_fd_invalid">Description field can\'t be empty</string>
    <string name="EditDeckActivity.Dialog.DeleteDeck.Title">Delete deck</string>
    <string name="EditDeckActivity.Dialog.DeleteDeck.Message">Do you want to delete this deck?</string>

    <!-- StudyActivity-->
    <string name="study_name">Study</string>
    <string name="deck_timer">DECK TIMER:</string>
    <string name="card_timer">CARD TIMER:</string>
    <string name="flip">FLIP!</string>
    <string name="iknow">I KNOW!</string>
    <string name="shuffle">SHUFFLE</string>


</resources>
