<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/ReportsActivity.toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_below="@id/ReportsActivity.toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="15sp"
            android:text="@string/reports_message"/>

        <EditText
            android:id="@+id/ReportsActivity.etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:background="@color/edit_text_background">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/daily"
                android:textSize="14sp"
                android:checked="true"
                android:id="@+id/ReportsActivity.rbDaily" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/weekly"
                android:textSize="14sp"
                android:id="@+id/ReportsActivity.rbWeekly" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_orange_background"
        android:textStyle="bold"
        android:layout_margin="16dp"/>
</RelativeLayout>