<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/EditDeckActivity.toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/nav_drawer_background"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_public"
                    android:textColor="@color/light_gray"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Switch
                android:id="@+id/EditDeckActivity.switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_private"
                    android:textColor="@color/light_gray"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditDeckActivity.etTitle"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textColorHint="@color/light_gray" />

                <EditText
                    android:id="@+id/EditDeckActivity.etDescription"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/description"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textColorHint="@color/light_gray" />

                <EditText
                    android:id="@+id/EditDeckActivity.etKeyWords"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/keywords"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textColorHint="@color/light_gray" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/EditDeckActivity.btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_orange_background"
        android:text="@string/save"
        android:textStyle="bold" />

</LinearLayout>